--- a/package.json
+++ b/package.json
@@ -8,15 +8,25 @@
     "gatsby": "^2.24.50",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-manifest": "^2.4.24",
-    "gatsby-plugin-offline": "^3.2.24",
+    "gatsby-plugin-mdx": "^1.2.36",
+    "gatsby-plugin-netlify": "^2.3.13",
+    "gatsby-plugin-offline": "^3.2.25",
     "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.28",
+    "gatsby-plugin-robots-txt": "^1.5.1",
+    "gatsby-plugin-sharp": "^2.6.29",
+    "gatsby-plugin-sitemap": "^2.4.12",
+    "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-remark-embed-video": "^3.0.10",
+    "gatsby-remark-images": "^3.3.27",
+    "gatsby-remark-responsive-iframe": "^2.4.12",
     "gatsby-source-filesystem": "^2.3.25",
+    "gatsby-transformer-remark": "^2.8.30",
     "gatsby-transformer-sharp": "^2.5.13",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "prettier": "2.1.0"
