--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@mdi/js": "^5.5.55",
     "classnames": "^2.2.6",
     "esm": "^3.2.25",
     "gatsby": "^2.24.50",
@@ -33,7 +34,9 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
-    "styled-components": "^5.1.1"
+    "react-swipeable-views": "^0.13.9",
+    "styled-components": "^5.1.1",
+    "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
     "prettier": "2.1.0"
