--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "elevated-infusions",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Decadent infused creations for celebrations & every-day indulgence.",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Stacey Eliuk <stacey.eliuk@gmail.com>",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -57,9 +57,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/hotpinkpoliticalmatrix/elevatedinfusions"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/hotpinkpoliticalmatrix/elevatedinfusions/issues"
   }
 }
