--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "gatsby-source-filesystem": "^2.3.25",
     "gatsby-transformer-remark": "^2.8.30",
     "gatsby-transformer-sharp": "^2.5.13",
+    "i": "^0.3.6",
     "material-ui": "^0.20.2",
+    "npm": "^6.14.8",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
