--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "npm": "^6.14.8",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
+    "react-swipeable-views": "^0.14.0-alpha.0",
     "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
