--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
+    "react-slick": "^0.27.11",
     "react-swipeable-views": "^0.14.0-alpha.0",
+    "slick-carousel": "^1.8.1",
     "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
