--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-mdx": "^1.2.40",
     "gatsby-plugin-netlify": "^2.3.15",
+    "gatsby-plugin-netlify-cms": "^4.3.16",
     "gatsby-plugin-offline": "^3.2.28",
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-robots-txt": "^1.5.2",
@@ -30,6 +31,7 @@
     "gatsby-transformer-remark": "^2.8.35",
     "gatsby-transformer-sharp": "^2.5.15",
     "material-ui": "^0.20.2",
+    "netlify-cms-app": "^2.12.28",
     "npm": "^6.14.8",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
