--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,10 +2,12 @@ backend:
   name: github
   repo: hotpinkpoliticalmatrix/elevatedinfusions
 media_folder: static/assets
+branding_folder: src/images/branding
+products_folder: src/content/products
 public_folder: /assets
 collections:
-  - name: blog
-    label: Blog
+  - name: products
+    label: Products
     folder: blog
     create: true
     fields:
