--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
+    "react-parallax": "^3.1.2",
     "react-slick": "^0.27.11",
     "react-swipeable-views": "^0.14.0-alpha.0",
     "slick-carousel": "^1.8.1",
